2017-05-02  Charlie Zender  <zender@uci.edu>

	* Add ALM/CLM unstructured grid ("almu") stubs to ncremap

	* NCO 4.6.7-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha04 final changes';git push
	git tag -a 4.6.7-alpha04 -m 'Version 4.6.7-alpha04 new features: MTA flags, ncap2 in-fill, MSVC';git push --tags

	* Fix Windows MSVC C++ compilation issues introduced in 4.6.6

	* Henry added simple_fill_miss() weighted_fill_miss() to ncap2

2017-05-01  Charlie Zender  <zender@uci.edu>

	* Alter docs and ncclimo/ncremap to use MTA flag-handling

	* Merge Jerome's MTA flag-handling

2017-04-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha03 final changes';git push
	git tag -a 4.6.7-alpha03 -m 'Version 4.6.7-alpha03 new features: msk_src,msk_dst,msk_out,ugrid;';git push --tags

	* Document mask features

	* Add --msk_out to ncremap

	* Generalize nco_grd_nfr() to handle msk_rnk_nbr > grd_rnk_nbr so, e.g., SST(time,lat,lon) works

	* Fix numerous other nco_grd_nfr() errors in new mask code

	* Fix uninitialized memory errors caught by valgrind in recent nco_grd_nfr() grid-span code

2017-04-27  Charlie Zender  <zender@uci.edu>

	* Add mask_b = mask_out = dst_grid_imask to regridded output when flg_msk_out == True

2017-04-26  Charlie Zender  <zender@uci.edu>

	* Add ugrid_fl option to direct ncremap to infer UGRID from source input file

	* Regridder can now infer masks from missing values of any variable

	* Add msk_src and msk_dst options to specify mask-template variables to ncremap

2017-04-25  Charlie Zender  <zender@uci.edu>

	* Add clc.cdl, nsm.cdl, and trj.cdl for EarthCube CF2 project

	* Change "grid" argument to "scrip" to distinguish it from UGRID

2017-04-24  Charlie Zender  <zender@uci.edu>

	* Document UGRID

	* NCO 4.6.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha02 final changes';git push